--- a/style.css
+++ b/style.css
@@ -53,15 +53,15 @@ website: 	http://blankenship.xyz
 
  	header {
   		column-count: 2;
-		column-gap: 3rem;
 		column-width: 50%;
-		margin-bottom: 4rem;
+		margin-bottom: 6rem;
   	}
 
-  	header img#logo { width: 75%; }
+  	header img#logo { width: 65%; }
 
 	footer {
 		border-top: 2px solid #fff;
+		text-align: center;
 		padding: 1rem 0;
 	}
 
@@ -86,6 +86,13 @@ website: 	http://blankenship.xyz
   		border: none 0;
   		color: #111;
   		font: 700 1.2em/2em "futura-pt", sans-serif;
+  		letter-spacing: .2em;
+  		text-transform: uppercase;
+  		padding: 2rem 1rem;
+  	}
+
+  	button:hover {
+  		background: #00CFFF;	
   	}
 	
 
