--- a/style.css
+++ b/style.css
@@ -71,9 +71,14 @@ website: 	http://blankenship.xyz
 	h1 { display: none; }
 
 	h2 {
+		font: 400 1.2em/1.4em "century-old-style-std", serif;
+		margin-bottom: 2.4rem;
+	}
+
+	h2 span {
+		display: inline-block;
 		font: 700 1.2em/1.4em "futura-pt", sans-serif;
 		margin-bottom: 2.4rem;
-  		text-align: justify;
 	}
 
 	p { font: 400 1.2em/1.2em "futura-pt", sans-serif; }
