--- a/style.css
+++ b/style.css
@@ -66,26 +66,26 @@ website: 	http://blankenship.xyz
 
 	h2 {
 		font: 400 1.3em/1.6em "century-old-style-std", serif;
-		margin-bottom: 1.6rem;
+		margin-bottom: 3.2rem;
 	}
 
 	h2 span {
-		font: 700 .9em/1.4em "futura-pt", sans-serif;
+		font: 700 1.1em/1.6em "futura-pt", sans-serif;
 	}
 
   	button {
-  		background: #FFB715;
+  		background: #00CFFF;
   		border-radius: 1em;
   		border: none 0;
   		color: #111;
   		font: 700 1em/2em "futura-pt", sans-serif;
   		letter-spacing: .2em;
   		text-transform: uppercase;
-  		padding: 0 1rem;
+  		padding: .25rem 1.25rem;
   	}
 
   	button:hover {
-  		background: #00CFFF;	
+  		background: #00AEDD;	
   	}
 	
 
@@ -98,47 +98,15 @@ website: 	http://blankenship.xyz
 		padding: 3vw;
 	}
 
-	header,
-	section ul,
-	section ul.duo,
-	section ul.quad,
-	footer {
+	header {
   		column-count: 1;
 		column-width: 100%;
   	}
-
-  	h2, h4 {
-  		text-align:  left;
-  	}
-
-	h3 {	
-		font: 700 1.6em/1.2em input-mono, monospace, sans-serif;
-		margin-bottom: 1.2rem;
-	}
-	
-	section {
-		border-top:  0 none;
-	}
-
-	section ul li {
-		margin-bottom: 4rem;
-	}
-
-	section ul li p {
-		border-bottom:  2px solid #ddd;
-		margin-bottom: 2rem;
-		padding-bottom: 1rem;
-	}
 
   	header img#logo {
   		margin:  1rem 37vw 3rem;
   		text-align: center;
   		width: 20vw;
-  	}
-
-  	header main h2,
-  	footer p {
-  		text-align: center;
   	}
 
 	}
