--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ website: 	http://blankenship.xyz
 
   	button {
   		background: #00CFFF;
-  		border-radius: 1em;
+  		border-radius: 1.25em;
   		border: none 0;
   		color: #111;
   		font: 700 1em/2em "futura-pt", sans-serif;
@@ -85,7 +85,8 @@ website: 	http://blankenship.xyz
   	}
 
   	button:hover {
-  		background: #00AEDD;	
+  		background: #00AEDD;
+  		color: #FFF;	
   	}
 	
 
@@ -95,7 +96,7 @@ website: 	http://blankenship.xyz
 	@media (min-width: 1px) and (max-width: 900px) {
 
 	body {
-		padding: 3vw;
+		padding: 5vw;
 	}
 
 	header {
@@ -104,9 +105,14 @@ website: 	http://blankenship.xyz
   	}
 
   	header img#logo {
-  		margin:  1rem 37vw 3rem;
+  		margin:  2rem auto 3rem;
   		text-align: center;
-  		width: 20vw;
+  		width: 50vw;
+  	}
+
+  	button {
+  		margin: 0 auto;
+  		text-align: center;
   	}
 
 	}
