--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ website: 	http://blankenship.xyz
   	}
 
   	header img#logo {
-  		margin:  2rem auto 3rem;
+  		margin:  2rem 20vw 3rem;
   		text-align: center;
   		width: 50vw;
   	}
